# ostatic

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
