[tool.poetry]
name = "ostatic"
version = "0.1.0"
description = ""
authors = ["matthieugouel <matthieu.gouel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aiofiles = "^0.6.0"
starlette = "^0.14.2"
httpx = "^0.17.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
